--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-
+    <div id="info"></div>
     <script src="./script/script.js"></script>
 </body>
 </html>
